--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Dullc</title>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css');
 
 * {margin:0; padding:0; box-sizing:border-box; font-family:"Tajawal", sans-serif;}
 body {
@@ -31,7 +32,7 @@ body {
   animation:fadeIn 1s ease;
 }
 
-/* ============ الصورة والاسم يمين-يسار ============ */
+/* الصورة والاسم */
 .top-section {
   display: flex;
   width: 100%;
@@ -87,18 +88,18 @@ h1.name {
   100% { transform: translateY(-6px); }
 }
 
-/* ============ بطاقات المعلومات (info-row) ============ */
+/* بطاقات المعلومات جهة اليمين */
 .info-box {
   display:flex;
   flex-direction:column;
   gap:12px;
+  margin-left:auto;
   margin-top:10px;
 }
 .info-row {
   display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:flex-start;
+  align-items:center;
+  justify-content:flex-start;
   background: linear-gradient(145deg, rgba(255,215,0,0.15), rgba(255,215,0,0.05));
   border:1px solid rgba(255,215,0,0.35);
   padding:10px 15px;
@@ -111,23 +112,31 @@ h1.name {
   transform: translateY(-3px);
   box-shadow: 0 0 20px rgba(255,215,0,0.5);
 }
+.info-row i {
+  color:#f5d380;
+  margin-left:8px;
+  min-width:18px;
+  text-align:center;
+}
 .info-row span.question {
   font-weight:700;
   font-size:15px;
   color:#f5d380;
-  margin-bottom:3px;
+  margin-left:5px;
 }
 .info-row span.answer {
   font-size:15px;
   color:#fff;
+  margin-left:auto;
 }
 .info-row a {
   color:#f5d380;
   text-decoration:none;
   font-weight:700;
+  margin-left:auto;
 }
 
-/* ============ باقي التنسيق كما هوا ============ */
+/* باقي التنسيق */
 .glow {
   position:absolute;
   top:-40%; left:50%; transform:translateX(-50%);
@@ -146,7 +155,7 @@ h1.name {
   padding:15px;
   border-radius:20px;
   border:1px solid rgba(255,215,0,0.12);
-  box-shadow:0 0 12px rgba(255,215,0,0.07);
+  box-shadow:0 0 12px rgba(255,215,0.07);
   animation:fadeInUp 1s ease forwards 0.5s;
 }
 .quotes span{
@@ -185,7 +194,7 @@ h1.name {
   100%{transform:translateX(-50%) scale(1.05);}
 }
 
-/* ======= الفيديوهات ======= */
+/* الفيديوهات */
 .videos {
   width:100%;
   margin-top:20px;
@@ -263,21 +272,24 @@ h1.name {
       <div class="wave-text">أم لسان طويل</div>
     </div>
 
-    <!-- كروت المعلومات -->
     <div class="info-box">
       <div class="info-row">
+        <i class="fas fa-map-marker-alt"></i>
         <span class="question">البلد:</span>
         <span class="answer">مصر</span>
       </div>
       <div class="info-row">
+        <i class="fas fa-palette"></i>
         <span class="question">اللون:</span>
         <span class="answer">بينك</span>
       </div>
       <div class="info-row">
+        <i class="fas fa-smile"></i>
         <span class="question">المزاج:</span>
         <span class="answer">رايق</span>
       </div>
       <div class="info-row">
+        <i class="fas fa-comments"></i>
         <span class="question">الشات:</span>
         <a href="https://xat.com/melodylovers" target="_blank">شات ميلودى</a>
       </div>
