--- a/index.html
+++ b/index.html
@@ -91,14 +91,15 @@ h1.name {
   display:flex;
   flex-direction:column;
   gap:12px;
-  margin-left:20px; /* على يمين الصورة */
+  margin-left:20px;
   margin-top:10px;
 }
 .info-row {
   display:flex;
+  justify-content:flex-start;
   align-items:center;
   gap:10px;
-  background:rgba(255,215,0,0.05); /* اللون الأصلي الفاتح */
+  background:rgba(255,215,0,0.05);
   border:1px solid rgba(255,215,0,0.2);
   padding:10px 14px;
   border-radius:12px;
@@ -267,10 +268,10 @@ h1.name {
     </div>
 
     <div class="info-box">
-      <div class="info-row"><span class="question"><i>🌍</i> البلد:</span> <span class="answer">مصر</span></div>
-      <div class="info-row"><span class="question"><i>🎨</i> اللون:</span> <span class="answer">بينك</span></div>
-      <div class="info-row"><span class="question"><i>😎</i> المزاج:</span> <span class="answer">رايق</span></div>
-      <div class="info-row"><span class="question"><i>💬</i> الشات:</span> <a href="https://xat.com/melodylovers" target="_blank">شات ميلودى</a></div>
+      <div class="info-row"><span class="question"><i>🌍</i> البلد:</span><span class="answer">مصر</span></div>
+      <div class="info-row"><span class="question"><i>🎨</i> اللون:</span><span class="answer">بينك</span></div>
+      <div class="info-row"><span class="question"><i>😎</i> المزاج:</span><span class="answer">رايق</span></div>
+      <div class="info-row"><span class="question"><i>💬</i> الشات:</span><a href="https://xat.com/melodylovers" target="_blank">شات ميلودى</a></div>
     </div>
   </div>
 
