--- a/index.html
+++ b/index.html
@@ -118,12 +118,11 @@ h1.name {
   align-items:center;
   gap:5px;
 }
-.info-row span.answer {
+.info-row span.answer, .info-row a.answer {
   font-size:15px;
   color:#fff;
 }
-.info-row a {
-  color:#f5d380;
+.info-row a.answer {
   text-decoration:none;
   font-weight:700;
 }
@@ -268,10 +267,22 @@ h1.name {
     </div>
 
     <div class="info-box">
-      <div class="info-row"><span class="question"><i>🌍</i> البلد:</span><span class="answer">مصر</span></div>
-      <div class="info-row"><span class="question"><i>🎨</i> اللون:</span><span class="answer">بينك</span></div>
-      <div class="info-row"><span class="question"><i>😎</i> المزاج:</span><span class="answer">رايق</span></div>
-      <div class="info-row"><span class="question"><i>💬</i> الشات:</span><a href="https://xat.com/melodylovers" target="_blank">شات ميلودى</a></div>
+      <div class="info-row">
+        <span class="question"><i>🌍</i> البلد:</span>
+        <span class="answer">مصر</span>
+      </div>
+      <div class="info-row">
+        <span class="question"><i>🎨</i> اللون:</span>
+        <span class="answer">بينك</span>
+      </div>
+      <div class="info-row">
+        <span class="question"><i>😎</i> المزاج:</span>
+        <span class="answer">رايق</span>
+      </div>
+      <div class="info-row">
+        <span class="question"><i>💬</i> الشات:</span>
+        <a href="https://xat.com/melodylovers" class="answer" target="_blank">شات ميلودى</a>
+      </div>
     </div>
   </div>
 
