--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@ body {
   animation:fadeIn 1s ease;
 }
 
-/* ======== الصورة والاسم ======== */
+/* ============ الصورة والاسم يمين-يسار ============ */
 .top-section {
-  display:flex;
-  width:100%;
-  margin-bottom:20px;
+  display: flex;
+  width: 100%;
+  margin-bottom: 20px;
 }
 .left-box {
-  display:flex;
-  flex-direction:column;
-  align-items:center; 
-  margin-right:auto;  
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  margin-right: auto;  
 }
 .avatar {
   width:130px;
@@ -86,50 +86,47 @@ h1.name {
   100% { transform: translateY(-6px); }
 }
 
-/* ======== كروت المعلومات ======== */
+/* ============ بطاقات المعلومات يمين الصورة ============ */
 .info-box {
   display:flex;
   flex-direction:column;
   gap:12px;
-  margin-left:20px;
+  margin-right:20px;
   margin-top:10px;
 }
 .info-row {
   display:flex;
-  justify-content:flex-start;
-  align-items:center;
+  flex-direction: row; /* السؤال أول ثم الإجابة */
+  justify-content: flex-start;
+  align-items: center;
   gap:10px;
-  background:rgba(255,215,0,0.05);
-  border:1px solid rgba(255,215,0,0.2);
+  background: rgba(26,26,26,0.8); /* اللون القديم */
+  border: 1px solid rgba(255,215,0,0.25);
   padding:10px 14px;
   border-radius:12px;
-  min-width:180px;
-  transition:all 0.3s ease;
 }
-.info-row:hover {
-  background:rgba(255,215,0,0.12);
-  box-shadow:0 0 10px rgba(255,215,0,0.4);
-}
-.info-row .question {
+.info-row span.question {
   font-weight:700;
   font-size:15px;
   color:#f5d380;
   display:flex;
   align-items:center;
-  gap:5px;
-  order:1; /* السؤال دائمًا أولًا */
+  gap:6px;
 }
-.info-row .answer {
+.info-row span.question::before {
+  content: "❖"; /* أيقونة قبل السؤال */
+}
+.info-row span.answer {
   font-size:15px;
   color:#fff;
-  order:2; /* الإجابة بعد السؤال */
 }
-.info-row a.answer {
+.info-row a {
+  color:#f5d380;
   text-decoration:none;
   font-weight:700;
 }
 
-/* ======== باقي التنسيقات ======== */
+/* ============ تأثيرات عامة ============ */
 .glow {
   position:absolute;
   top:-40%; left:50%; transform:translateX(-50%);
@@ -187,7 +184,7 @@ h1.name {
   100%{transform:translateX(-50%) scale(1.05);}
 }
 
-/* ======== الفيديوهات ======== */
+/* ======= الفيديوهات ======= */
 .videos {
   width:100%;
   margin-top:20px;
@@ -251,11 +248,15 @@ h1.name {
 }
 </style>
 </head>
+
 <body>
+
 <div class="card">
   <div class="glow"></div>
 
   <div class="top-section">
+
+    <!-- صورة + اسم -->
     <div class="left-box">
       <div class="avatar">
         <img src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar"/>
@@ -265,24 +266,31 @@ h1.name {
       <div class="wave-text">أم لسان طويل</div>
     </div>
 
+    <!-- مربع المعلومات يمين الصورة -->
     <div class="info-box">
+
       <div class="info-row">
-        <span class="question"><i>🌍</i> البلد:</span>
+        <span class="question">البلد:</span>
         <span class="answer">مصر</span>
       </div>
+
       <div class="info-row">
-        <span class="question"><i>🎨</i> اللون:</span>
+        <span class="question">اللون:</span>
         <span class="answer">بينك</span>
       </div>
+
       <div class="info-row">
-        <span class="question"><i>😎</i> المزاج:</span>
+        <span class="question">المزاج:</span>
         <span class="answer">رايق</span>
       </div>
+
       <div class="info-row">
-        <span class="question"><i>💬</i> الشات:</span>
-        <a href="https://xat.com/melodylovers" class="answer" target="_blank">شات ميلودى</a>
+        <span class="question">الشات:</span>
+        <a href="https://xat.com/melodylovers" target="_blank">شات ميلودى</a>
       </div>
+
     </div>
+
   </div>
 
   <div class="quotes">
@@ -306,6 +314,8 @@ h1.name {
       </div>
     </div>
   </div>
+
 </div>
+
 </body>
 </html>
