--- a/index.html
+++ b/index.html
@@ -31,17 +31,16 @@ body {
   animation:fadeIn 1s ease;
 }
 
-/* الصورة والاسم */
 .top-section {
   display: flex;
   width: 100%;
   margin-bottom: 20px;
+  gap:20px;
 }
 .left-box {
   display: flex;
   flex-direction: column;
   align-items: center; 
-  margin-right: auto;  
 }
 .avatar {
   width:130px;
@@ -65,69 +64,46 @@ body {
   transform: scale(1.25);
   box-shadow:0 0 30px rgba(255,215,0,0.6);
 }
-h1.name {
-  margin:10px 0 5px;
-  font-size:28px;
-  color:#f5d380;
-  text-align:center;
-}
-.wave-text {
-  color:#f5d380;
-  font-size:14px;
-  text-align:center;
-  margin:2px 0;
-  animation:wave 2s ease-in-out infinite alternate;
-}
-.wave-text:nth-child(3) {
-  animation-delay:0.3s;
-}
-@keyframes wave {
-  0% { transform: translateY(0); }
-  100% { transform: translateY(-6px); }
-}
+h1.name { margin:10px 0 5px; font-size:28px; color:#f5d380; text-align:center; }
+.wave-text { color:#f5d380; font-size:14px; text-align:center; margin:2px 0; animation:wave 2s ease-in-out infinite alternate; }
+.wave-text:nth-child(3) { animation-delay:0.3s; }
+@keyframes wave {0% { transform: translateY(0); } 100% { transform: translateY(-6px); }}
 
-/* بطاقات المعلومات */
 .info-box {
   display:flex;
   flex-direction:column;
   gap:12px;
-  margin-right:20px;
   margin-top:10px;
+  flex:1;
 }
 .info-row {
   display:flex;
-  flex-direction: row; 
-  justify-content: flex-start;
-  align-items: center;
+  justify-content:flex-start;
+  align-items:center;
   gap:10px;
   background: rgba(26,26,26,0.8);
   border: 1px solid rgba(255,215,0,0.25);
   padding:10px 14px;
   border-radius:12px;
 }
-.info-row span.question {
-  font-weight:700;
-  font-size:15px;
-  color:#f5d380;
+.info-row .question {
   display:flex;
   align-items:center;
   gap:6px;
-}
-.info-row span.question::before {
-  content: "•"; /* أيقونة آمنة */ 
+  font-weight:700;
+  font-size:15px;
   color:#f5d380;
 }
-.info-row span.answer {
+.info-row .question::before {
+  content:"•";
+  color:#f5d380;
+}
+.info-row .answer {
   font-size:15px;
   color:#fff;
 }
-.info-row a {
-  color:#f5d380;
-  text-decoration:none;
-  font-weight:700;
-}
+.info-row a { color:#f5d380; text-decoration:none; font-weight:700; }
 
-/* تأثيرات عامة */
 .glow {
   position:absolute;
   top:-40%; left:50%; transform:translateX(-50%);
@@ -138,153 +114,52 @@ h1.name {
   animation:glowAnim 3s ease-in-out infinite alternate;
 }
 .quotes{
-  margin-top:18px;
-  font-size:17px;
-  line-height:1.9;
-  opacity:0;
-  background:rgba(255,215,0,0.05);
-  padding:15px;
-  border-radius:20px;
-  border:1px solid rgba(255,215,0,0.12);
-  box-shadow:0 0 12px rgba(255,215,0,0.07);
+  margin-top:18px; font-size:17px; line-height:1.9; opacity:0;
+  background:rgba(255,215,0,0.05); padding:15px; border-radius:20px;
+  border:1px solid rgba(255,215,0,0.12); box-shadow:0 0 12px rgba(255,215,0,0.07);
   animation:fadeInUp 1s ease forwards 0.5s;
 }
-.quotes span{
-  display:block;
-  margin-bottom:10px;
-  opacity:0;
-  animation:quoteAppear 0.8s ease forwards;
-}
+.quotes span{display:block; margin-bottom:10px; opacity:0; animation:quoteAppear 0.8s ease forwards;}
 .quotes span:nth-child(1){animation-delay:0.7s}
 .quotes span:nth-child(2){animation-delay:1s}
-@keyframes quoteAppear{
-  0%{opacity:0; transform:translateY(15px);}
-  100%{opacity:1; transform:translateY(0);}
-}
-.heart {
-  font-size:40px;
-  margin-top:15px;
-  animation:pulse 1.4s infinite ease-in-out, fadeInUp 1s ease forwards 1.2s;
-  opacity:0;
-}
-@keyframes pulse {
-  0% {transform:scale(1); opacity:0.8;}
-  50% {transform:scale(1.3); opacity:1;}
-  100% {transform:scale(1); opacity:0.8;}
-}
-@keyframes fadeInUp{
-  0%{opacity:0; transform:translateY(25px);}
-  100%{opacity:1; transform:translateY(0);}
-}
-@keyframes fadeIn{
-  0%{opacity:0; transform:scale(0.95);}
-  100%{opacity:1; transform:scale(1);}
-}
-@keyframes glowAnim{
-  0%{transform:translateX(-50%) scale(1);}
-  100%{transform:translateX(-50%) scale(1.05);}
-}
+@keyframes quoteAppear{0%{opacity:0; transform:translateY(15px);}100%{opacity:1; transform:translateY(0);}}
+.heart{font-size:40px; margin-top:15px; animation:pulse 1.4s infinite ease-in-out, fadeInUp 1s ease forwards 1.2s; opacity:0;}
+@keyframes pulse{0% {transform:scale(1); opacity:0.8;}50% {transform:scale(1.3); opacity:1;}100% {transform:scale(1); opacity:0.8;}}
+@keyframes fadeInUp{0%{opacity:0; transform:translateY(25px);}100%{opacity:1; transform:translateY(0);}}
+@keyframes fadeIn{0%{opacity:0; transform:scale(0.95);}100%{opacity:1; transform:scale(1);}}
+@keyframes glowAnim{0%{transform:translateX(-50%) scale(1);}100%{transform:translateX(-50%) scale(1.05);}}
 
-/* الفيديوهات */
-.videos {
-  width:100%;
-  margin-top:20px;
-  padding-top:10px;
-  border-top:1px solid rgba(255,215,0,0.25);
-}
-.videos-title{
-  background:#f5d380;
-  color:#000;
-  padding:10px 18px;
-  font-size:18px;
-  font-weight:700;
-  border-radius:25px;
-  display:inline-block;
-  margin-bottom:15px;
-}
-.videos-scroll{
-  overflow-x:auto;
-  white-space:nowrap;
-  padding-bottom:10px;
-  scrollbar-width:thin;
-  scrollbar-color:#f5d380 #222;
-}
-.videos-scroll::-webkit-scrollbar{
-  height:8px;
-}
-.videos-scroll::-webkit-scrollbar-track{
-  background:#222;
-  border-radius:10px;
-}
-.videos-scroll::-webkit-scrollbar-thumb{
-  background:#f5d380;
-  border-radius:10px;
-}
-.video-box{
-  display:inline-block;
-  width:150px;
-  height:260px;
-  background:#000;
-  border-radius:16px;
-  overflow:hidden;
-  margin:0 10px;
-  border:1px solid rgba(255,215,0,0.25);
-  box-shadow:0 0 15px rgba(255,215,0.2);
-  opacity:0;
-  transform:translateY(20px);
-  animation:fadeInUp .8s ease forwards;
-}
+.videos { width:100%; margin-top:20px; padding-top:10px; border-top:1px solid rgba(255,215,0,0.25);}
+.videos-title{ background:#f5d380; color:#000; padding:10px 18px; font-size:18px; font-weight:700; border-radius:25px; display:inline-block; margin-bottom:15px;}
+.videos-scroll{ overflow-x:auto; white-space:nowrap; padding-bottom:10px; scrollbar-width:thin; scrollbar-color:#f5d380 #222;}
+.videos-scroll::-webkit-scrollbar{height:8px;}
+.videos-scroll::-webkit-scrollbar-track{background:#222;border-radius:10px;}
+.videos-scroll::-webkit-scrollbar-thumb{background:#f5d380;border-radius:10px;}
+.video-box{display:inline-block;width:150px;height:260px;background:#000;border-radius:16px;overflow:hidden;margin:0 10px;border:1px solid rgba(255,215,0,0.25);box-shadow:0 0 15px rgba(255,215,0.2);opacity:0;transform:translateY(20px);animation:fadeInUp .8s ease forwards;}
 .video-box:nth-child(1){animation-delay:.1s}
 .video-box:nth-child(2){animation-delay:.25s}
 .video-box:nth-child(3){animation-delay:.4s}
-.video-box iframe{
-  width:150px;
-  height:260px;
-  border:0;
-}
-.video-box:hover{
-  transform:scale(1.07);
-  transition:.25s ease;
-  box-shadow:0 0 18px rgba(255,215,0,0.4);
-}
+.video-box iframe{width:150px;height:260px;border:0;}
+.video-box:hover{transform:scale(1.07);transition:.25s ease;box-shadow:0 0 18px rgba(255,215,0,0.4);}
 </style>
 </head>
 
 <body>
-
 <div class="card">
   <div class="glow"></div>
-
   <div class="top-section">
     <div class="left-box">
-      <div class="avatar">
-        <img src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar"/>
-      </div>
+      <div class="avatar"><img src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar"/></div>
       <h1 class="name">ɖƲιιȻ</h1>
       <div class="wave-text">الحربوقة 🐍</div>
       <div class="wave-text">أم لسان طويل</div>
     </div>
 
     <div class="info-box">
-      <div class="info-row">
-        <span class="question">البلد:</span>
-        <span class="answer">مصر</span>
-      </div>
-
-      <div class="info-row">
-        <span class="question">اللون:</span>
-        <span class="answer">بينك</span>
-      </div>
-
-      <div class="info-row">
-        <span class="question">المزاج:</span>
-        <span class="answer">رايق</span>
-      </div>
-
-      <div class="info-row">
-        <span class="question">الشات:</span>
-        <a href="https://xat.com/melodylovers" target="_blank">شات ميلودى</a>
-      </div>
+      <div class="info-row"><span class="question">البلد:</span><span class="answer">مصر</span></div>
+      <div class="info-row"><span class="question">اللون:</span><span class="answer">بينك</span></div>
+      <div class="info-row"><span class="question">المزاج:</span><span class="answer">رايق</span></div>
+      <div class="info-row"><span class="question">الشات:</span><a href="https://xat.com/melodylovers" target="_blank">شات ميلودى</a></div>
     </div>
   </div>
 
@@ -298,19 +173,12 @@ h1.name {
   <div class="videos">
     <div class="videos-title">فيديوهاتي</div>
     <div class="videos-scroll">
-      <div class="video-box">
-        <iframe src="https://www.youtube.com/embed/1uMZhJeXLYw" allowfullscreen></iframe>
-      </div>
-      <div class="video-box">
-        <iframe src="https://www.youtube.com/embed/mcp5fsJ8dw8" allowfullscreen></iframe>
-      </div>
-      <div class="video-box">
-        <iframe src="https://www.youtube.com/embed/HVgy8Ge0GJQ" allowfullscreen></iframe>
-      </div>
+      <div class="video-box"><iframe src="https://www.youtube.com/embed/1uMZhJeXLYw" allowfullscreen></iframe></div>
+      <div class="video-box"><iframe src="https://www.youtube.com/embed/mcp5fsJ8dw8" allowfullscreen></iframe></div>
+      <div class="video-box"><iframe src="https://www.youtube.com/embed/HVgy8Ge0GJQ" allowfullscreen></iframe></div>
     </div>
   </div>
 
 </div>
-
 </body>
 </html>
