--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Dullc</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap');
 
@@ -32,7 +31,7 @@ body {
   animation:fadeIn 1s ease;
 }
 
-/* ============ الصورة والاسم يمين-يسار ============ */
+/* ========== صورة واسم ========== */
 .top-section {
   display: flex;
   width: 100%;
@@ -44,7 +43,6 @@ body {
   align-items: center; 
   margin-right: auto;  
 }
-
 .avatar {
   width:130px;
   height:130px;
@@ -74,7 +72,6 @@ h1.name {
   color:#f5d380;
   text-align:center;
 }
-
 .wave-text {
   color:#f5d380;
   font-size:14px;
@@ -85,57 +82,51 @@ h1.name {
 .wave-text:nth-child(3) {
   animation-delay:0.3s;
 }
-
 @keyframes wave {
   0% { transform: translateY(0); }
   100% { transform: translateY(-6px); }
 }
 
-/* ============ البطاقات الجانبية ============ */
+/* ========== بطاقات المعلومات ========== */
 .info-box {
   display:flex;
   flex-direction:column;
   gap:12px;
-  margin-right:20px;
+  margin-left:20px;
   margin-top:10px;
 }
-
 .info-row {
   display:flex;
   align-items:center;
-  justify-content:flex-start;
   background:#1a1a1a;
   border:1px solid rgba(255,215,0,0.25);
   padding:10px 14px;
   border-radius:12px;
   min-width:180px;
-  gap:8px;
 }
-
-.info-row i {
-  color:#f5d380;
-  min-width:18px;
-  text-align:center;
-}
-
 .info-row span.question {
   font-weight:700;
   font-size:15px;
   color:#f5d380;
+  margin-left:6px;
+  display:flex;
+  align-items:center;
 }
-
 .info-row span.answer {
   font-size:15px;
   color:#fff;
 }
-
 .info-row a {
   color:#f5d380;
   text-decoration:none;
   font-weight:700;
 }
+.info-row i {
+  margin-right:6px;
+  color:#f5d380;
+}
 
-/* ============ تأثيرات عامة ============ */
+/* ========== تأثيرات عامة ========== */
 .glow {
   position:absolute;
   top:-40%; left:50%; transform:translateX(-50%);
@@ -145,7 +136,6 @@ h1.name {
   z-index:0;
   animation:glowAnim 3s ease-in-out infinite alternate;
 }
-
 .quotes{
   margin-top:18px;
   font-size:17px;
@@ -166,35 +156,29 @@ h1.name {
 }
 .quotes span:nth-child(1){animation-delay:0.7s}
 .quotes span:nth-child(2){animation-delay:1s}
-
 @keyframes quoteAppear{
   0%{opacity:0; transform:translateY(15px);}
   100%{opacity:1; transform:translateY(0);}
 }
-
 .heart {
   font-size:40px;
   margin-top:15px;
   animation:pulse 1.4s infinite ease-in-out, fadeInUp 1s ease forwards 1.2s;
   opacity:0;
 }
-
 @keyframes pulse {
   0% {transform:scale(1); opacity:0.8;}
   50% {transform:scale(1.3); opacity:1;}
   100% {transform:scale(1); opacity:0.8;}
 }
-
 @keyframes fadeInUp{
   0%{opacity:0; transform:translateY(25px);}
   100%{opacity:1; transform:translateY(0);}
 }
-
 @keyframes fadeIn{
   0%{opacity:0; transform:scale(0.95);}
   100%{opacity:1; transform:scale(1);}
 }
-
 @keyframes glowAnim{
   0%{transform:translateX(-50%) scale(1);}
   100%{transform:translateX(-50%) scale(1.05);}
@@ -263,15 +247,14 @@ h1.name {
   box-shadow:0 0 18px rgba(255,215,0,0.4);
 }
 </style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
 </head>
-
 <body>
+
 <div class="card">
   <div class="glow"></div>
 
   <div class="top-section">
-
-    <!-- صورة + اسم -->
     <div class="left-box">
       <div class="avatar">
         <img src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar"/>
@@ -281,35 +264,24 @@ h1.name {
       <div class="wave-text">أم لسان طويل</div>
     </div>
 
-    <!-- مربع المعلومات يمين الصورة -->
     <div class="info-box">
-
       <div class="info-row">
-        <i class="fas fa-globe"></i>
-        <span class="question">البلد:</span>
+        <span class="question"><i class="fas fa-flag"></i> البلد:</span>
         <span class="answer">مصر</span>
       </div>
-
       <div class="info-row">
-        <i class="fas fa-palette"></i>
-        <span class="question">اللون:</span>
+        <span class="question"><i class="fas fa-palette"></i> اللون:</span>
         <span class="answer">بينك</span>
       </div>
-
       <div class="info-row">
-        <i class="fas fa-smile"></i>
-        <span class="question">المزاج:</span>
+        <span class="question"><i class="fas fa-face-smile"></i> المزاج:</span>
         <span class="answer">رايق</span>
       </div>
-
       <div class="info-row">
-        <i class="fas fa-comments"></i>
-        <span class="question">الشات:</span>
+        <span class="question"><i class="fas fa-comments"></i> الشات:</span>
         <a href="https://xat.com/melodylovers" target="_blank">شات ميلودى</a>
       </div>
-
     </div>
-
   </div>
 
   <div class="quotes">
@@ -335,5 +307,6 @@ h1.name {
   </div>
 
 </div>
+
 </body>
 </html>
