--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ h1.name {
 }
 .info-row {
   display:flex;
+  justify-content:space-between;
   align-items:center;
   background:#1a1a1a;
   border:1px solid rgba(255,215,0,0.25);
@@ -108,7 +109,6 @@ h1.name {
   font-weight:700;
   font-size:15px;
   color:#f5d380;
-  margin-left:6px;
   display:flex;
   align-items:center;
 }
@@ -122,7 +122,7 @@ h1.name {
   font-weight:700;
 }
 .info-row i {
-  margin-right:6px;
+  margin-left:6px; /* للأيقونة قبل السؤال */
   color:#f5d380;
 }
 
