--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Dullc</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap');
 
@@ -17,6 +18,7 @@ body {
   min-height:100vh;
   padding:25px;
 }
+
 .card {
   width:100%;
   max-width:600px;
@@ -31,18 +33,20 @@ body {
   animation:fadeIn 1s ease;
 }
 
-/* ========== صورة واسم ========== */
 .top-section {
   display: flex;
   width: 100%;
   margin-bottom: 20px;
+  justify-content: flex-start;
 }
+
 .left-box {
   display: flex;
   flex-direction: column;
   align-items: center; 
-  margin-right: auto;  
+  margin-right: 20px;  
 }
+
 .avatar {
   width:130px;
   height:130px;
@@ -72,6 +76,7 @@ h1.name {
   color:#f5d380;
   text-align:center;
 }
+
 .wave-text {
   color:#f5d380;
   font-size:14px;
@@ -82,51 +87,12 @@ h1.name {
 .wave-text:nth-child(3) {
   animation-delay:0.3s;
 }
+
 @keyframes wave {
   0% { transform: translateY(0); }
   100% { transform: translateY(-6px); }
 }
 
-/* ========== بطاقات المعلومات ========== */
-.info-box {
-  display:flex;
-  flex-direction:column;
-  gap:12px;
-  margin-left:20px;
-  margin-top:10px;
-}
-.info-row {
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  background:#1a1a1a;
-  border:1px solid rgba(255,215,0,0.25);
-  padding:10px 14px;
-  border-radius:12px;
-  min-width:180px;
-}
-.info-row span.question {
-  font-weight:700;
-  font-size:15px;
-  color:#f5d380;
-  display:flex;
-  align-items:center;
-}
-.info-row span.answer {
-  font-size:15px;
-  color:#fff;
-}
-.info-row a {
-  color:#f5d380;
-  text-decoration:none;
-  font-weight:700;
-}
-.info-row i {
-  margin-left:6px; /* للأيقونة قبل السؤال */
-  color:#f5d380;
-}
-
-/* ========== تأثيرات عامة ========== */
 .glow {
   position:absolute;
   top:-40%; left:50%; transform:translateX(-50%);
@@ -136,6 +102,53 @@ h1.name {
   z-index:0;
   animation:glowAnim 3s ease-in-out infinite alternate;
 }
+
+/* ======== بطاقات المعلومات ======== */
+.info-box {
+  display:flex;
+  flex-direction:column;
+  gap:12px;
+  margin-top:10px;
+  justify-content: flex-start;
+}
+
+.info-row {
+  display:flex;
+  align-items:center;
+  justify-content: flex-start;
+  gap:10px;
+  background: #1a1a1a;
+  border:1px solid rgba(255,215,0,0.25);
+  padding:10px 15px;
+  border-radius:12px;
+  min-width:200px;
+  box-shadow: 0 0 15px rgba(255,215,0,0.2);
+  transition: 0.3s ease;
+}
+.info-row:hover {
+  box-shadow: 0 0 20px rgba(255,215,0,0.5);
+}
+.info-row i {
+  color:#f5d380;
+  font-size:16px;
+  width:18px;
+}
+.info-row span.question {
+  font-weight:700;
+  font-size:15px;
+  color:#f5d380;
+}
+.info-row span.answer, .info-row a {
+  font-size:15px;
+  color:#fff;
+  font-weight:500;
+}
+.info-row a {
+  color:#f5d380;
+  text-decoration:none;
+}
+
+/* ======== الاقتباسات ======== */
 .quotes{
   margin-top:18px;
   font-size:17px;
@@ -156,29 +169,35 @@ h1.name {
 }
 .quotes span:nth-child(1){animation-delay:0.7s}
 .quotes span:nth-child(2){animation-delay:1s}
+
 @keyframes quoteAppear{
   0%{opacity:0; transform:translateY(15px);}
   100%{opacity:1; transform:translateY(0);}
 }
+
 .heart {
   font-size:40px;
   margin-top:15px;
   animation:pulse 1.4s infinite ease-in-out, fadeInUp 1s ease forwards 1.2s;
   opacity:0;
 }
+
 @keyframes pulse {
   0% {transform:scale(1); opacity:0.8;}
   50% {transform:scale(1.3); opacity:1;}
   100% {transform:scale(1); opacity:0.8;}
 }
+
 @keyframes fadeInUp{
   0%{opacity:0; transform:translateY(25px);}
   100%{opacity:1; transform:translateY(0);}
 }
+
 @keyframes fadeIn{
   0%{opacity:0; transform:scale(0.95);}
   100%{opacity:1; transform:scale(1);}
 }
+
 @keyframes glowAnim{
   0%{transform:translateX(-50%) scale(1);}
   100%{transform:translateX(-50%) scale(1.05);}
@@ -247,7 +266,6 @@ h1.name {
   box-shadow:0 0 18px rgba(255,215,0,0.4);
 }
 </style>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
 </head>
 <body>
 
@@ -255,6 +273,8 @@ h1.name {
   <div class="glow"></div>
 
   <div class="top-section">
+
+    <!-- صورة + اسم -->
     <div class="left-box">
       <div class="avatar">
         <img src="https://img.alfrsantv.com/img/f176550047297151.png" alt="Avatar"/>
@@ -264,24 +284,35 @@ h1.name {
       <div class="wave-text">أم لسان طويل</div>
     </div>
 
+    <!-- مربع المعلومات يمين الصورة -->
     <div class="info-box">
+
       <div class="info-row">
-        <span class="question"><i class="fas fa-flag"></i> البلد:</span>
+        <i class="fas fa-flag"></i>
+        <span class="question">البلد:</span>
         <span class="answer">مصر</span>
       </div>
+
       <div class="info-row">
-        <span class="question"><i class="fas fa-palette"></i> اللون:</span>
+        <i class="fas fa-palette"></i>
+        <span class="question">اللون:</span>
         <span class="answer">بينك</span>
       </div>
+
       <div class="info-row">
-        <span class="question"><i class="fas fa-face-smile"></i> المزاج:</span>
+        <i class="fas fa-face-smile"></i>
+        <span class="question">المزاج:</span>
         <span class="answer">رايق</span>
       </div>
+
       <div class="info-row">
-        <span class="question"><i class="fas fa-comments"></i> الشات:</span>
+        <i class="fas fa-comment"></i>
+        <span class="question">الشات:</span>
         <a href="https://xat.com/melodylovers" target="_blank">شات ميلودى</a>
       </div>
+
     </div>
+
   </div>
 
   <div class="quotes">
