--- a/index.html
+++ b/index.html
@@ -37,14 +37,13 @@ body {
   display: flex;
   width: 100%;
   margin-bottom: 20px;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
 .left-box {
   display: flex;
   flex-direction: column;
   align-items: center; 
-  margin-right: 20px;  
 }
 
 .avatar {
@@ -109,7 +108,7 @@ h1.name {
   flex-direction:column;
   gap:12px;
   margin-top:10px;
-  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .info-row {
@@ -284,7 +283,7 @@ h1.name {
       <div class="wave-text">أم لسان طويل</div>
     </div>
 
-    <!-- مربع المعلومات يمين الصورة -->
+    <!-- مربع المعلومات جهة اليمين -->
     <div class="info-box">
 
       <div class="info-row">
