--- a/index.html
+++ b/index.html
@@ -293,13 +293,13 @@ h1.name {
       <div class="info-row">
         <i class="fas fa-palette"></i>
         <span class="question">اللون:</span>
-        <span class="answer">بينك</span>
+        <span class="answer">اسود</span>
       </div>
 
       <div class="info-row">
         <i class="fas fa-face-smile"></i>
         <span class="question">المزاج:</span>
-        <span class="answer">رايق</span>
+        <span class="answer">متقلب</span>
       </div>
 
       <div class="info-row">
