--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ h1.name {
 .snowflake {
   position: absolute;
   top: -10px;
-  color: #fff;
+  color: ##EFBF04;
   font-size: 8px;
   user-select: none;
   pointer-events: none;
