--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@ h1.name {
   margin-top:18px;
   font-size:17px;
   line-height:1.9;
-  background:rgba(175,8,86,0.05);
+  background:#dfccc6;
   padding:15px;
   border-radius:20px;
-  border:1px solid rgba(175,8,86,0.12);
-  box-shadow:0 0 12px rgba(175,8,86,0.07);
+  border:1px solid #762966;
+  box-shadow:0 0 12px #762966;
 }
 .quotes span{
   display:block;
