--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@ body {
   z-index: 2;
 }
 
-/* ======== الصورة الشخصية مع Zoom على الصورة فقط ======== */
 .avatar {
   width:130px;
   height:130px;
@@ -112,7 +111,7 @@ h1.name {
   z-index:0;
 }
 
-/* ======== الاقتباسات بدون تأثيرات ======== */
+/* ======== الاقتباسات  ======== */
 .quotes{
   margin-top:18px;
   font-size:17px;
