--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ h1.name {
 
   <div class="quotes">
     <span>أحبك فقط بسبب شخصيتك، وليس لما تمتلكه…</span>
-    <span>أحبك لما تصنعه بي، ولما تضيفه لروحي وجودك.</span>
+    <span>أحبك لما تصنعه بي، ولما تضيفه لروحي وجودك. ♥️</span>
   </div>
 
   <div class="videos">
