--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ h1.name {
   </div>
 
   <div class="quotes">
-    <span>أحبك فقط بسبب شخصيتك، وليس لما تمتلكه…</span>
+    <span>أحبك فقط بسبب شخصيتك، وليس لما تمتلكه</span>
     <span>♥️.أحبك لما تصنعه بي، ولما تضيفه لروحي وجودك</span>
   </div>
 
@@ -247,10 +247,10 @@ h1.name {
         <iframe src="https://www.youtube.com/embed/1uMZhJeXLYw" allowfullscreen></iframe>
       </div>
       <div class="video-box">
-        <iframe src="https://www.youtube.com/embed/mcp5fsJ8dw8" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/HVgy8Ge0GJQ" allowfullscreen></iframe>
       </div>
       <div class="video-box">
-        <iframe src="https://www.youtube.com/embed/HVgy8Ge0GJQ" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/mcp5fsJ8dw8" allowfullscreen></iframe>
       </div>
     </div>
   </div>
